Fixed game generation in normal rounds, uses now round robin.
Fixed game generation in normal rounds, uses now round robin.